--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Crystals Collector</title>
   <!--<link rel="stylesheet" type="text/css" href="assets/css/reset.css"> -->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-	<script src="http://code.jquery.com/jquery.js"></script>
+	<script src="https://code.jquery.com/jquery.js"></script>
 </head>
 <body>
    <header>
